// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test the checkbox component should tick it 1`] = `
.css-13azwyo,
[data-css-13azwyo] {
  position: relative;
}

.css-1dqgz2l,
[data-css-1dqgz2l] {
  border-radius: 3px;
  height: 25px;
  width: 25px;
  border-width: 3px;
  border-style: solid;
  border-color: lightGrey;
  transition: 250ms;
  -webkit-transition: 250ms;
  -moz-transition: 250ms;
}

.css-1m9hm8a,
[data-css-1m9hm8a] {
  padding: 10px 15px;
  min-height: 50px;
  border-bottom: 1px solid #ecf0f1;
  background-color: white;
}

.css-h7582n,
[data-css-h7582n] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-1wp5mix,
[data-css-1wp5mix] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-flex: 0 0 auto;
}

.css-t2hdxa,
[data-css-t2hdxa] {
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
}

.css-4p3ux5,
[data-css-4p3ux5] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-kvq3ck,
[data-css-kvq3ck] {
  padding-left: 15px;
  padding-right: 15px;
}

.css-18icfsk,
[data-css-18icfsk] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #333333;
}

<div
  data-css-1m9hm8a=""
  data-css-h7582n=""
>
  <div
    data-css-h7582n=""
  >
    <div
      data-css-13azwyo=""
      data-css-1dqgz2l=""
      data-css-1wp5mix=""
    >
      <div
        data-css-4p3ux5=""
        data-css-t2hdxa=""
      >
        <input
          checked={false}
          id="a"
          onChange={[Function]}
          style={
            Object {
              "height": "25px",
              "margin": 0,
              "opacity": 0,
              "width": "25px",
            }
          }
          type="checkbox"
          value={false}
        />
      </div>
    </div>
  </div>
  <label
    htmlFor="a"
  >
    <div
      data-css-4p3ux5=""
      data-css-kvq3ck=""
    >
      <div
        data-css-18icfsk=""
        data-css-4p3ux5=""
      >
        I am a nice checkbox!
      </div>
    </div>
  </label>
</div>
`;

exports[`Test the checkbox component should tick it 2`] = `
.css-13azwyo,
[data-css-13azwyo] {
  position: relative;
}

.css-1m9hm8a,
[data-css-1m9hm8a] {
  padding: 10px 15px;
  min-height: 50px;
  border-bottom: 1px solid #ecf0f1;
  background-color: white;
}

.css-h7582n,
[data-css-h7582n] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-1wp5mix,
[data-css-1wp5mix] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-flex: 0 0 auto;
}

.css-t2hdxa,
[data-css-t2hdxa] {
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
}

.css-4p3ux5,
[data-css-4p3ux5] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-kvq3ck,
[data-css-kvq3ck] {
  padding-left: 15px;
  padding-right: 15px;
}

.css-18icfsk,
[data-css-18icfsk] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #333333;
}

.css-5qivm3,
[data-css-5qivm3] {
  border-radius: 3px;
  height: 25px;
  width: 25px;
  background-color: #3598db;
  border-width: 3px;
  border-style: solid;
  border-color: #3598db;
  transition: 250ms;
  -webkit-transition: 250ms;
  -moz-transition: 250ms;
}

.css-13tvizl,
[data-css-13tvizl] {
  position: relative;
  bottom: 1px;
}

<div
  data-css-1m9hm8a=""
  data-css-h7582n=""
>
  <div
    data-css-h7582n=""
  >
    <div
      data-css-13azwyo=""
      data-css-1wp5mix=""
      data-css-5qivm3=""
    >
      <div
        data-css-13tvizl=""
        data-css-4p3ux5=""
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          data-css-4p3ux5=""
          size={14}
          style={
            Object {
              "fill": "#fff",
              "height": 14,
              "stroke": false,
              "width": 14,
            }
          }
        />
      </div>
      <div
        data-css-4p3ux5=""
        data-css-t2hdxa=""
      >
        <input
          checked={true}
          id="a"
          onChange={[Function]}
          style={
            Object {
              "height": "25px",
              "margin": 0,
              "opacity": 0,
              "width": "25px",
            }
          }
          type="checkbox"
          value={true}
        />
      </div>
    </div>
  </div>
  <label
    htmlFor="a"
  >
    <div
      data-css-4p3ux5=""
      data-css-kvq3ck=""
    >
      <div
        data-css-18icfsk=""
        data-css-4p3ux5=""
      >
        I am a nice checkbox!
      </div>
    </div>
  </label>
</div>
`;

exports[`Test the checkbox component should work with children 1`] = `
.css-13azwyo,
[data-css-13azwyo] {
  position: relative;
}

.css-1dqgz2l,
[data-css-1dqgz2l] {
  border-radius: 3px;
  height: 25px;
  width: 25px;
  border-width: 3px;
  border-style: solid;
  border-color: lightGrey;
  transition: 250ms;
  -webkit-transition: 250ms;
  -moz-transition: 250ms;
}

.css-h7582n,
[data-css-h7582n] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-1wp5mix,
[data-css-1wp5mix] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-flex: 0 0 auto;
}

.css-t2hdxa,
[data-css-t2hdxa] {
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
}

.css-4p3ux5,
[data-css-4p3ux5] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-kvq3ck,
[data-css-kvq3ck] {
  padding-left: 15px;
  padding-right: 15px;
}

.css-18icfsk,
[data-css-18icfsk] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #333333;
}

.css-l8kta8,
[data-css-l8kta8] {
  padding: 10px 15px;
  min-height: 50px;
  border-bottom: 1px solid #ecf0f1;
  background-color: darkMarco;
}

<div
  data-css-h7582n=""
  data-css-l8kta8=""
>
  <div
    data-css-h7582n=""
  >
    <div
      data-css-13azwyo=""
      data-css-1dqgz2l=""
      data-css-1wp5mix=""
    >
      <div
        data-css-4p3ux5=""
        data-css-t2hdxa=""
      >
        <input
          checked={false}
          id="a"
          onChange={[Function]}
          style={
            Object {
              "height": "25px",
              "margin": 0,
              "opacity": 0,
              "width": "25px",
            }
          }
          type="checkbox"
          value={false}
        />
      </div>
    </div>
  </div>
  <label
    htmlFor="a"
  >
    <div
      data-css-4p3ux5=""
      data-css-kvq3ck=""
    >
      <div
        data-css-18icfsk=""
        data-css-4p3ux5=""
      >
        <h1>
          test
        </h1>
      </div>
    </div>
  </label>
</div>
`;
